# fastapi-genai-01

./: README.md  data.txt  pyproject.toml
classes/: 01.py  types.py
todos/: main.py
todos/config/: db.py
todos/models/: todos.py
